2013-01-28  Sam Weinig  <sam@webkit.org>

        Disable default use of the Plug-in XPCService until we can
        figure out how to deal with the 32-bit one.

        * UIProcess/Plugins/mac/PluginProcessProxyMac.mm:
        (WebKit::shouldUseXPC):
        (WebKit::PluginProcessProxy::platformInitializeLaunchOptions):

2013-01-28  Sam Weinig  <sam@webkit.org>

        Plug-ins should initialize their sandbox at creation time
        https://bugs.webkit.org/show_bug.cgi?id=108098

        Reviewed by Anders Carlsson.

        Add the ability to add string key/value pairs to process creation parameters
        to allow the plugin process to get passed the plugin path which in turn allows
        the plugin to initialize its sandbox at the correct time.

        * NetworkProcess/EntryPoint/mac/XPCService/NetworkService.Development/NetworkServiceMain.Development.mm:
        * NetworkProcess/EntryPoint/mac/XPCService/NetworkService/NetworkServiceMain.mm:
        * NetworkProcess/EntryPoint/mac/XPCService/NetworkServiceEntryPoint.mm:
        (NetworkServiceInitializer):
        * PluginProcess/EntryPoint/mac/LegacyProcess/PluginProcessMain.mm:
        (WebKit::PluginProcessMainDelegate::getExtraData):
        (PluginProcessMainDelegate):
        * PluginProcess/EntryPoint/mac/XPCService/PluginService.32/PluginService.32.Main.mm:
        * PluginProcess/EntryPoint/mac/XPCService/PluginService.64/PluginService.64.Main.mm:
        * PluginProcess/EntryPoint/mac/XPCService/PluginService.Development/PluginService.Development.Main.mm:
        * PluginProcess/EntryPoint/mac/XPCService/PluginServiceEntryPoint.mm:
        (WebKit):
        (PluginServiceInitializerDelegate):
        (WebKit::PluginServiceInitializerDelegate::PluginServiceInitializerDelegate):
        (WebKit::PluginServiceInitializerDelegate::getExtraData):
        (PluginServiceInitializer):
        * PluginProcess/PluginProcess.cpp:
        (WebKit::PluginProcess::initializeProcess):